does this fix it on ios devices?

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -20,7 +20,7 @@ body, html, #___gatsby, #mycode, main, .page-root {
     right: 0;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-color: #000000;
     background-repeat: no-repeat;
 }
